--- a/src/app/clocks-component/clocks-component.component.html
+++ b/src/app/clocks-component/clocks-component.component.html
@@ -1,1 +1,7 @@
-<app-clock-display-component></app-clock-display-component>
+<div class="clockComponent">
+    <ul class="clockList">
+        <li *ngFor="let aClock of clockList; let i = index">
+            <app-clock-display-component [index]="i"/>
+        </li>
+    </ul>
+</div>
