--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!-- header -->
 <h1>Time Zone Clocks</h1>
 <!-- settings component -->
- <app-settings-component></app-settings-component>
-<!-- clock component -->
- <app-clocks-component></app-clocks-component>
+ <div class="mainComponents">
+    
+    <app-clock-form-component></app-clock-form-component>
+    <!-- clock component -->
+    <app-clock-display-component></app-clock-display-component>
+</div>
