--- a/src/app/clock-form-component/clock-form-component.component.html
+++ b/src/app/clock-form-component/clock-form-component.component.html
@@ -1,12 +1,21 @@
-<div class="settingsForm">
-    Time zone
-    <br>
-    <select [(ngModel)]="currentClock.timeZone" (change)="editClock()" >
-        <option *ngFor="let aZone of timeZones">{{aZone}}</option>
-    </select>
-    <br>
-    <input class="isDigital" type="checkbox" [(ngModel)]="currentClock.isDigital" (change)="editClock()" ><!--saves the checkbox value to placeholder also fires editClock() on change-->
-    <span>Digital?</span>
-    <br>
-    <button class="delete" (click)="deleteClock()"> Delete</button> <!--ties clicking the delete button to deleteClock()-->
+<div class="settingsComponent">
+    <h2>Settings</h2>
+    <ul class="settingsList">
+        <!-- create a new list item containing a clock form(settings) component for ever clock in clocklist -->
+        <li *ngFor="let aClock of clockList; let i = index">
+            <div class="settingsForm">
+            Time zone
+            <br>
+            <select [(ngModel)]="aClock.timeZone" (change)="editClock(i,aClock)" >
+                <option *ngFor="let aZone of timeZones">{{aZone}}</option>
+            </select>
+            <br>
+            <input class="isDigital" type="checkbox" [(ngModel)]="aClock.isDigital" (change)="editClock(i,aClock)" ><!--saves the checkbox value to placeholder also fires editClock() on change-->
+            <span>Digital?</span>
+            <br>
+            <button class="delete" (click)="deleteClock(i)"> Delete</button> <!--ties clicking the delete button to deleteClock()-->
+            </div>
+        </li>
+    </ul>
+<button class ="add" (click)="addClock()">Add</button>  <!-- ties clcicking the add button to addClock() -->
 </div>
