--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+html{
+    height: 100%;
+}
+body{
+    height: 100%;
+    background:linear-gradient(to bottom, rgb(255, 99, 94),rgb(248, 155, 112));
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: monospace;
+
+}
