--- a/src/app/clock-display-component/clock-display-component.component.css
+++ b/src/app/clock-display-component/clock-display-component.component.css
@@ -59,20 +59,24 @@ li{
 
   .hour {
     width: 3px;
-    height: 80px;
+    height: 45px;
     background-color: black;
+    top: 28%;
+    left: calc(50%);
   }
   
   .minute {
-    width: 2px;
+    width: 3px;
     height: 80px;
     background-color: #333;
+    left: calc(50%);
   }
   
   .second {
     width: .5px;
     height:80px;
     background-color: red;
+    left: calc(50%);
   }
   
   @font-face{
