--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@ html{
 }
 body{
     height: 100%;
-    background:linear-gradient(to bottom, rgb(255, 99, 94),rgb(248, 155, 112));
-    background-repeat: no-repeat;
+    background:radial-gradient(circle, rgb(255, 99, 94),rgb(248, 155, 112));
+    /* background-repeat: no-repeat; */
     background-size: cover;
     font-family: monospace;
 
